<resources>

    <string name="app_name">Localkam.com</string>
    <string name="i_want_to_hire">I want to Hire</string>
    <string name="i_want_a_job">I want a Job</string>
    <string name="job">TODO</string>
    <string name="hire">TODO</string>
    <string name="job_details">A laborer (or labourer) is a person who works in manual labor types, especially in the construction and factory industries\' workforce.</string>
    <string name="mistri"> Ghar banaane wale mistri</string>
    <string name="Marble">Floor Marble Stone</string>


</resources>